--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -9,8 +9,8 @@
     
     <StackPanel>
         <TextBlock FontSize="17" FontWeight="Bold" HorizontalAlignment="Center">Системное программирование</TextBlock>
-        <Button x:Name="ThreadingBtn" Content="Многопоточность" Margin="20,10"
-                Click="ThreadingBtn_Click"/>
+        <Button x:Name="ThreadingBtn" Content="Многопоточность" Margin="20,8" Click="ThreadingBtn_Click"/>
+        <Button x:Name="SynchroBtn" Content="Синхронизация" Margin="20,8" Click="SynchroBtn_Click"/>
     </StackPanel>
     
 </Window>
