--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -12,6 +12,7 @@
         <Button x:Name="ThreadingBtn" Content="Многопоточность" Margin="20,8" Click="ThreadingBtn_Click"/>
         <Button x:Name="SynchroBtn" Content="Синхронизация" Margin="20,8" Click="SynchroBtn_Click"/>
         <Button x:Name="TaskBtn" Content="Многозадачность" Margin="20,8" Click="TaskBtn_Click"/>
+        <Button x:Name="CancellingBtn" Content="Отмена задачы" Margin="20,8" Click="CancellingBtn_Click"/>
     </StackPanel>
     
 </Window>
