--- a/ProcessWindow.xaml
+++ b/ProcessWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SPNP"
         mc:Ignorable="d"
+        Closed="Window_Closed"
         Title="ProcessWindow" Height="700" Width="500" WindowStartupLocation="CenterScreen">
 
     <StackPanel>
