Add task chaining/Continuations

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -14,6 +14,7 @@
         <Button x:Name="TaskBtn" Content="Многозадачность" Margin="20,8" Click="TaskBtn_Click"/>
         <Button x:Name="CancellingBtn" Content="Отмена задачы" Margin="20,8" Click="CancellingBtn_Click"/>
         <Button x:Name="ProcessBtn" Content="Процессы" Margin="20,8" Click="ProcessBtn_Click"/>
+        <Button x:Name="ChainingBtn" Content="Нитки. Продолжение" Margin="20,8" Click="ChainingBtn_Click"/>
     </StackPanel>
     
 </Window>
