--- a/ThreadingWindow.xaml
+++ b/ThreadingWindow.xaml
@@ -22,7 +22,7 @@
         <StackPanel Orientation="Horizontal">
             <Button x:Name="btnStart2" Content="Start" Margin="5,0,5,0" Padding="15,2,15,2" Click="BtnStart2_Click"/>
             <ProgressBar x:Name="progressBar2" Width="200"/>
-            <Button x:Name="btnStop2" Content="Stop" Margin="5,0,0,0" Padding="15,2,15,2" Click="BtnStop2_Click_1"/>
+            <Button x:Name="btnStop2" Content="Stop" Margin="5,0,0,0" Padding="15,2,15,2" Click="BtnStop2_Click"/>
         </StackPanel>
 
         <TextBlock Text="Проблема: клик Start два раза, стартует два потока" Margin="5 10 0 5"/>
